--- a/qml.qrc
+++ b/qml.qrc
@@ -24,6 +24,7 @@
         <file>qml/HistoricDataKindDialog.qml</file>
         <file>qml/DifferClickMouseArea.qml</file>
         <file>qml/HistoricDisplayStatisticsDialog.qml</file>
+        <file>qml/DumpClearFileDialog.qml</file>
         <file>qml/DumpFileDialog.qml</file>
         <file>qml/DynamicDataKindDialog.qml</file>
         <file>qml/DynamicDisplayStatisticsDialog.qml</file>
