--- a/qml.qrc
+++ b/qml.qrc
@@ -60,6 +60,7 @@
         <file>qml/StatusPanel.qml</file>
         <file>qml/StatusView.qml</file>
         <file>qml/SummaryView.qml</file>
+        <file>qml/TabLayout.qml</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
     <qresource prefix="/resources/images">
