Add product icons
Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -244,5 +244,14 @@
     </qresource>
     <qresource prefix="/resources/images/app_icons">
         <file alias="amlip.svg">resources/images/app_icons/amlip.svg</file>
+        <file alias="backend.svg">resources/images/app_icons/backend.svg</file>
+        <file alias="fast.svg">resources/images/app_icons/fast.svg</file>
+        <file alias="monitor.svg">resources/images/app_icons/monitor.svg</file>
+        <file alias="record.svg">resources/images/app_icons/record.svg</file>
+        <file alias="replay.svg">resources/images/app_icons/replay.svg</file>
+        <file alias="router.svg">resources/images/app_icons/router.svg</file>
+        <file alias="safe.svg">resources/images/app_icons/safe.svg</file>
+        <file alias="shapesdemo.svg">resources/images/app_icons/shapesdemo.svg</file>
+        <file alias="spy.svg">resources/images/app_icons/spy.svg</file>
     </qresource>
 </RCC>
