--- a/qml.qrc
+++ b/qml.qrc
@@ -53,8 +53,8 @@
         <file>qml/MonitorToolBarButton.qml</file>
         <file>qml/Panels.qml</file>
         <file>qml/PhysicalView.qml</file>
-        <file>qml/ProblemTreeView.qml</file>
-        <file>qml/ProblemTreeViewItem.qml</file>
+        <file>qml/StatusTreeView.qml</file>
+        <file>qml/StatusTreeViewItem.qml</file>
         <file>qml/QosView.qml</file>
         <file>qml/ScheduleClearDialog.qml</file>
         <file>qml/SeriesSetMaxPointsDialog.qml</file>
