--- a/qml.qrc
+++ b/qml.qrc
@@ -253,4 +253,15 @@
         <file alias="SAFEDDS.svg">resources/images/app_icons/SAFEDDS.svg</file>
         <file alias="SHAPES_DEMO.svg">resources/images/app_icons/SHAPES_DEMO.svg</file>
     </qresource>
+    <qresource prefix="/resources/images/app_logos">
+        <file alias="AML_IP.svg">resources/images/app_logos/AML_IP.svg</file>
+        <file alias="DDS_RECORDER.svg">resources/images/app_logos/DDS_RECORDER.svg</file>
+        <file alias="DDS_REPLAYER.svg">resources/images/app_logos/DDS_REPLAYER.svg</file>
+        <file alias="DDS_ROUTER.svg">resources/images/app_logos/DDS_ROUTER.svg</file>
+        <file alias="FASTDDS.svg">resources/images/app_logos/FASTDDS.svg</file>
+        <file alias="FASTDDS_MONITOR.svg">resources/images/app_logos/FASTDDS_MONITOR.svg</file>
+        <file alias="FASTDDS_SPY.svg">resources/images/app_logos/FASTDDS_SPY.svg</file>
+        <file alias="SAFEDDS.svg">resources/images/app_logos/SAFEDDS.svg</file>
+        <file alias="SHAPES_DEMO.svg">resources/images/app_logos/SHAPES_DEMO.svg</file>
+    </qresource>
 </RCC>
