Improve graph visual details (#209)
* Refs #19973: Fix topic lines below entities visual bug

Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

* Refs #19973: Update Warning Icon to be more visible

Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

* Refs #19973: Remove info panel refresh call when new status is reported

Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

* Refs #19973: Improve arrows when related topic is not displayed

Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

* Refs #19973: Fix glitch when filtering domain graph per topic

Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

* Refs #19973: Apply rev suggestions

Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

* Refs #19973: Fix identation

Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

* Refs #19973: Fix Gif size to adapt resolution

Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

* Refs #19973: Please uncrustify

Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

* Refs #19973: Fix statistics backend StatusLevel references

Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

---------

Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -76,6 +76,7 @@
         <file alias="graphs.svg">resources/images/graphs.svg</file>
         <file alias="domain_graph.svg">resources/images/domain_graph.svg</file>
         <file alias="topic_graph.svg">resources/images/topic_graph.svg</file>
+        <file alias="loading_graph.gif">resources/images/loading_graph.gif</file>
     </qresource>
     <qresource prefix="/resources/images/icons">
         <file alias="clearissues_black.svg">resources/images/icons/clearissues/clearissues_black.svg</file>
@@ -163,6 +164,7 @@
         <file alias="issues_eProsimaLightBlue.svg">resources/images/icons/issues/issues_eProsimaLightBlue.svg</file>
         <file alias="issues_grey.svg">resources/images/icons/issues/issues_grey.svg</file>
         <file alias="issues_white.svg">resources/images/icons/issues/issues_white.svg</file>
+        <file alias="issues_yellow.svg">resources/images/icons/issues/issues_yellow.svg</file>
         <file alias="lessthan_black.svg">resources/images/icons/lessthan/lessthan_black.svg</file>
         <file alias="lessthan_eProsimaLightBlue.svg">resources/images/icons/lessthan/lessthan_eProsimaLightBlue.svg</file>
         <file alias="lessthan_grey.svg">resources/images/icons/lessthan/lessthan_grey.svg</file>
